force-app/main/default/objects/genesis__Checklist__c/genesis__Checklist__c.object-meta.xml
<CustomObject>
    <label>Checklist</label>
    <nameField>
        <displayFormat>CLID-{0000000000}</displayFormat>
        <label>CheckList ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>