force-app/main/default/objects/genesis__Checklist__c/fields/Checklist_Detail_Fails__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Detail_Fails__c</fullName>
    <label>Checklist Detail Fails</label>
    <summaryFilterItems>
        <field>Checklist_Detail__c.Status__c</field>
        <operation>notEqual</operation>
        <value>SUCCESS</value>
    </summaryFilterItems>
    <summaryForeignKey>Checklist_Detail__c.Checklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>