force-app/main/default/objects/genesis__Checklist__c/fields/Checklist_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Total_Count__c</fullName>
    <label>Checklist Total Count</label>
    <summaryForeignKey>Checklist_Detail__c.Checklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>