force-app/main/default/objects/genesis__Checklist__c/fields/Collateral_Name__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.genesis__Application__c</field>
            <operation>equals</operation>
            <valueField>genesis__Application_Collateral__c.genesis__Application__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>genesis__Application_Collateral__c</referenceTo>
    <relationshipLabel>Checklist</relationshipLabel>
    <relationshipName>Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>