force-app/main/default/objects/genesis__Checklist__c/fields/Exception_Category__c.field-meta.xml
<CustomField>
    <fullName>Exception_Category__c</fullName>
    <label>Exception Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>