force-app/main/default/objects/genesis__Checklist__c/fields/Exception_Recommender__c.field-meta.xml
<CustomField>
    <fullName>Exception_Recommender__c</fullName>
    <label>Exception Recommender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>