force-app/main/default/objects/genesis__Checklist__c/fields/Exception_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Exception_Sub_Category__c</fullName>
    <label>Exception Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Purpose</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>