force-app/main/default/objects/genesis__Checklist__c/fields/genesis__Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Rule</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>