force-app/main/default/objects/genesis__Checklist__c/fields/Rule_Classification2__c.field-meta.xml
<CustomField>
    <fullName>Rule_Classification2__c</fullName>
    <formula>IF(ISPICKVAL(Rule_Classification__c, &apos;&apos;), TEXT(genesis__Rule__r.Rule_Classification__c), TEXT(Rule_Classification__c))</formula>
    <label>Rule Classification2</label>
    <type>Text</type>
</CustomField>