force-app/main/default/objects/genesis__Checklist__c/fields/Rule_Classification__c.field-meta.xml
<CustomField>
    <fullName>Rule_Classification__c</fullName>
    <label>Rule Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Condition</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>