force-app/main/default/objects/genesis__Checklist__c/listViews/genesis__All.listView-meta.xml
<ListView>
    <fullName>genesis__All</fullName>
    <columns>NAME</columns>
    <columns>genesis__Application__c</columns>
    <columns>genesis__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>